# pyFaSTMM

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  devenv.nix  devenv.yaml  flake.nix  meson.build  pyproject.toml
.github/workflows/: publish.yml  test.yml  wheels.yml
examples/: two_sphere_cluster.py
scripts/: streamlit_app.py
src/pyfastmm/: __init__.py  _build.py  _config.py  _fastmm.py
src/pyfastmm/_fortran/: fastmm2_f2py.f90
src/pyfastmm/_fortran/patches/: gaussquad-f2py-ascii-fix.patch
tests/: test_compatibility.py  test_config.py  test_f2py_smoke.py  test_solve.py  test_tmatrix.py
tests/data/: fractal_sweep.toml
tools/: apply_patch.py  build_f2py_ext.py  wheel_smoke_test.py
